--- a/06-uvod-v-latex/urnik.tex
+++ b/06-uvod-v-latex/urnik.tex
@@ -21,7 +21,7 @@
 
 \title{Izdelava urnikov}
 \author{Nejc Širovnik}
-\date{14. 10. 2019}
+\date{14.10.2019}
 
 \maketitle
 
@@ -124,7 +124,7 @@ katere podatke naj vsebujejo.
    podrobneje opisana na koncu poglavja.
 
    \item Razred \emph{Skupina} predstavlja skupino študentov. Kot podatke torej potrebujemo
-   smer skupine (npr. pedagoška matematika) ter število študentov v njej. Podobno kot pri
+   smer skupine (npr.pedagoška matematika) ter število študentov v njej. Podobno kot pri
    profesorjih, tudi tukaj potrebujemo tabelo zasedenosti.
 
    \item Razred \emph{Predavalnica} nosi podatke o kapaciteti predavalnice, njeno oznako
@@ -182,7 +182,7 @@ Poglejmo si nekaj omejitev, ki jih urnik ne sme kršiti:
    \item Nobena skupina ne sme imeti več predavanj hkrati.
    \item Nobena predavalnica ne sme biti dodeljena večim predavanjem hkrati.
    \item Predavalnica mora imeti zadostno kapaciteto.
-   \item Predavanja posebne vrste (npr. vaje iz računalništva) se morajo izvajati v ustrezni predavalnici.
+   \item Predavanja posebne vrste (npr.vaje iz računalništva) se morajo izvajati v ustrezni predavalnici.
    \item Urnik mora zadoščati zastavljenemu časovnemu okvirju (npr. od sedmih zjutraj do osmih zvečer).
 \end{itemize}
 % konec okolja itemize
@@ -195,7 +195,7 @@ krši nobenega izmed zgoraj naštetih načel, a še zdaleč ne ustreza merilom k
 
 Algoritem je najbolje implementirati tako, da do kršenja strogih omejitev sploh ne more priti.
 Tabela zasedenosti je dober primer pametne implementacije, saj tako že v osnovi  preprečujemo
-dodeljevanje t.i. prekrivanj. Če želi algoritem dodeliti predavanje določeni predavalnici,
+dodeljevanje t.i.prekrivanj. Če želi algoritem dodeliti predavanje določeni predavalnici,
 mora najprej v tabeli zasedenosti preveriti, če je v tistem terminu le-ta še na voljo,
 sicer se vstavljanje ne izvede.
 
@@ -252,7 +252,7 @@ sprejet s strani večine, pa bi se povečala.
 
 Kot zanimivost naj omenimo, da se nekateri programerji odločajo tudi za utežitev strogih
 omejitev s to razliko, da so vrednosti teh uteži izjemno velike, zato se bo algoritem
-(skoraj) vedno "odločil", da jih ne bo prekršil. Tak način uteževanja pride v poštev
+(skoraj) vedno ">odločil"<, da jih ne bo prekršil. Tak način uteževanja pride v poštev
 takrat, ko algoritem v osnovi ne zadosti strogim omejitvam urnika.
 
 Ko enkrat ustrezno nastavimo vrednosti uteži, je treba ugotoviti, kako bomo postopali
@@ -268,13 +268,13 @@ Nižja vrednost formule pomeni kakovostnejši urnik, izračunamo pa jo na vsakem
 Korak pri izdelavi urnika predstavlja eno izmed operacij nad njim (označuje njegovo
 spremembo).
 
-V 2. poglavju bomo opisali postopek gradnje urnika, saj bomo podrobneje spoznali
+V 2.poglavju bomo opisali postopek gradnje urnika, saj bomo podrobneje spoznali
 operacije nad urnikom in več vrst optimizacijskih metod, ki jih lahko brez oklevanja
 poimenujemo kar osrčje programa za avtomatizirano izdelavo urnika.
 
 \section{Avtomatizirana izdelava urnika} % razdelek
 
-V 1. poglavju smo izvedeli, da ročna izdela urnikov ni tako preprosta, kot bi si
+V 1.poglavju smo izvedeli, da ročna izdela urnikov ni tako preprosta, kot bi si
 na prvi pogled predstavljali. Še večji izziv predstavlja implementacija algoritma, ki da
 (fakultetni) urnik. Obstaja pa velika razlika med prvim in drugim pristopom, saj ko je
 algoritem enkrat dobro napisan, smo se težav z izdelovanjem urnika za vselej rešili.
@@ -433,7 +433,7 @@ korakov, in si šele nato ogledajo njihov natančen opis.}
    ustavitveni pogoj je zadovoljivo velika vrednost kriterijske funkcije.
 
    \item Naključno izberemo okolico trenutne rešitve. Z okolico izberemo tudi operacijo,
-   ki jo izvajamo na tem koraku (npr. zamenjava dveh srečanj).
+   ki jo izvajamo na tem koraku (npr.zamenjava dveh srečanj).
 
    \item Če v tem koraku izberemo tisto zamenjavo srečanj, ki izmed vseh možnih najbolj
    poveča vrednost kriterijske funkcije, potem postopamo enako, kot požrešna metoda. Če
@@ -479,7 +479,7 @@ izbiro spremembe preveri, če je vsebovana v seznamu prepovedanih sprememb. Pogl
 je takšno postopanje smiselno.
 
 Naj bo $n=100$ ter ${s}_{1}$ sprememba urnika, ki nas je pripeljala v lokalni maksimum. To
-spremembo (npr. zamenjava $\text{srečanja}_{i}$ in $\text{srečanja}_{j}$) sedaj shranimo v
+spremembo (npr.zamenjava $\text{srečanja}_{i}$ in $\text{srečanja}_{j}$) sedaj shranimo v
 seznam tabujev. V naslednjem koraku izvedemo spremembo ${s}_{2}$, ki se prav tako shrani v
 seznam prepovedanih sprememb. Podobno naredimo za vse spremembe v nadaljnih korakih. S
 tem poskrbimo, da se lahko v isti lokalni maksimum vrnemo šele čez $n=100$ korakov, saj
@@ -530,7 +530,7 @@ uporabili katero izmed tehnik - mogoče bi katero izmed teh postopanj dalo celo 
 Zaključek % podrazdelek
 
 % V spodnjem odstavku naj bodo črke G, U in I v "Graphical User Interface" podčrtane.
-Sledili smo receptu in s tem izdelali "okusen obrok", treba ga je le še ustrezno postreči
+Sledili smo receptu in s tem izdelali ">okusen obrok"<, treba ga je le še ustrezno postreči
 gostom za mizo. S tem imamo v mislih grafični uporabniški vmesnik (\underline{G}raphical
 \underline{U}ser \underline{I}nterface), ki mora urnik uporabnikom predstaviti na razumljiv in
 pregleden način. Končnega izgleda izdelka nikakor ne smemo zanemariti, saj je ta med uporabniki
